--- a/TodoApp/Podfile
+++ b/TodoApp/Podfile
@@ -5,6 +5,6 @@ target 'TodoApp' do
   use_frameworks!
   pod 'CocoaLumberjack/Swift'
   pod 'SwiftLint'
-  pod 'CellAnimator', :path => 'CellAnimator'
-  pod 'MyColors', :path => 'MyColors'
+  pod 'CellAnimator', :path => 'TodoApp/CellAnimator'
+  pod 'MyColors', :path => 'TodoApp/MyColors'
 end
